great-idea/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */

.container {
	width: 1000px;
	padding: 0 auto;
	margin: 0 auto;
}

.style-nav {
	display: flex;
	justify-content: space-around;
	padding: 20px;
}

.style-nav a {
	padding-top: 10px;
	text-decoration: none;
	color: #B8B8B8;
}

span {
	font-size: 75px;
	font-family: 'Bangers', cursive;
}

/* hr {
	size: 2px;
} */

hr {   border: 0;   clear:both;   display:block;   width: 96%;   background-color:#FFFF00;   height: 1px; }

button {
	display: block;
	width: 150px;
	height: 25px;
	font-size: 14px;
	margin: 20px auto;
	border: 1px solid black;
	background: none;
}

.top-content {
	display: flex;
	padding: 40px;
	width: 100%;
}

.welcome {
	align-items: flex-start;
	margin-top: 60px;
	width: 50%;
	text-align: center;
}

.mid-content {
	display: flex;
	flex-wrap: wrap;
	margin: 0 auto;
	width: 100%;
}

.mid-content img {
	padding: 0 40px;
}

.bottom-content {
	display: flex;
	justify-content: center;
}

.features, .about{
	justify-content: space-evenly;
	margin: 10px auto;
	padding: 20px;
	width: 49%;
}

.features {
	padding-left: 35px;
	padding-right: 0px;
}

.about {
	padding-right: 60px;
	padding-left: 0px;
}

.services, .product, .vision {
	margin: 10px auto;
	padding: 15px;
	padding-bottom: 25px;
	width: 31%;
}

.services {
	margin-left: 25px;
}

.product {
	padding-top: 15px;
	padding-right: 10px;
	padding-left: 10px;
}

.vision {
	margin-right: 20px;
}

footer {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	margin-top: 10px
}

address {
	margin-left: 20px;
	padding-left: 20px;
}

.copyright {
	text-align: center;
}

/* services.html Selectors */

.services-container {
	width: 1000px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin: 0 auto;
}

.services-header nav {
	display: flex;
	justify-content: space-around;
	padding-top: 20px;
}

.services-header nav a {
	padding-top: 20px;
	text-decoration: none;
	color: #B8B8B8;
}

.services-header nav a:last-child {
	padding-top: 10px;
}

.services-top-content {
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding-bottom: 30px;
	margin: 30px;
	border-bottom: 1px solid black;
}

.services-top-content h1 {
	font-size: 25px;
	padding-top: 20px;
}


.services-mid-content {
	display: flex;
	/* justify-content: center; */
	flex-wrap: wrap;
	margin: 0 auto;
	border-bottom: 2px solid black;
	padding-bottom: 10px;
}

.services-mid-content button {
	border-radius: 5px;
	width: 150px;
	height: 35px;
	font-size: 12px;
	margin: 30px 0 20px 0;
	border: 1px solid black;
	background: white;
}

.design, .ux, .marketing, .webdev, .ios, .android {
	/* display: flex;
	flex-direction: column; */
	background: #e3e3e3;
	border: 2px solid black;
	padding: 30px 0 0 0;
	margin: 20px;
	width: 42%;
}

.design, .ux, .marketing, .webdev, .ios, .android p {
	padding-left: 15px;
	padding-right: 15px;
}

.android button {
	margin-left: 15px;
}

.android h2 {
	padding-left: 15px;
}

.services-bottom-content {
	display: flex;
	padding-top: 25px;
}

.services-bottom-content img {
	margin-right: 50px;
	padding-right: 50px;
}

.facts {
	padding: 20px;
	padding-right: 10px;
}

.facts p {
	padding-right: 15px;
	margin-right: 20px;
}

.facts ul li {
	list-style-type: square;
	margin-left: 20px;
}

.services-copyright {
	text-align: center;
}

